// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Editsettings location menu works correctly 1`] = `
Object {
  "data": Array [
    Array [
      "Soil-transmitted helminth infection prevalence 20% or higher",
      "The percentage of individuals in the general population infected with at least one species of soil-transmitted helminth is 20% or higher.",
      <p>
        No
      </p>,
      "Uganda",
      <EditSettingsButton
        changeSetting={[Function]}
        editLabel="Edit"
        inheritSettingsLabel="Inherit setting"
        openEditModal={[Function]}
        row={
          Object {
            "description": "The percentage of individuals in the general population infected with at least one species of soil-transmitted helminth is 20% or higher.",
            "documentId": "3264c866-078e-4112-8894-052d53ab0a97",
            "editing": false,
            "inheritedFrom": "02ebbc84-5e29-4cd5-9b79-c594058923e9",
            "key": "pop_helminth",
            "label": "Soil-transmitted helminth infection prevalence 20% or higher",
            "locationId": "02ebbc84-5e29-4cd5-9b79-c594058923e9",
            "providerId": "demo",
            "resolveSettings": false,
            "serverVersion": 1595886234688,
            "settingIdentifier": "population_characteristics",
            "settingMetadataId": "1279",
            "settingsId": "21",
            "team": "Bukesa",
            "teamId": "6c8d2b9b-2246-47c2-949b-4fe29e888cc8",
            "type": "Setting",
            "uuid": "9a1e2d64-6a13-4d3b-be88-052e1e6c1fa7",
            "v1Settings": false,
            "value": "false",
          }
        }
        setToNoLabel="Set to 'No'"
        setToYesLabel="Set to 'Yes'"
        showInheritSettingsLabel={false}
        value={false}
      />,
    ],
    Array [
      "Malaria-endemic setting",
      "This is a malaria-endemic setting.",
      <p>
        Yes
      </p>,
      "_",
      <EditSettingsButton
        changeSetting={[Function]}
        editLabel="Edit"
        inheritSettingsLabel="Inherit setting"
        openEditModal={[Function]}
        row={
          Object {
            "description": "This is a malaria-endemic setting.",
            "documentId": "3264c866-078e-4112-8894-052d53ab0a97",
            "editing": false,
            "inheritedFrom": "",
            "key": "pop_malaria",
            "label": "Malaria-endemic setting",
            "locationId": "02ebbc84-5e29-4cd5-9b79-c594058923e9",
            "providerId": "demo",
            "resolveSettings": false,
            "serverVersion": 1595886234688,
            "settingIdentifier": "population_characteristics",
            "settingMetadataId": "1282",
            "settingsId": "21",
            "team": "Bukesa",
            "teamId": "6c8d2b9b-2246-47c2-949b-4fe29e888cc8",
            "type": "Setting",
            "uuid": "2409a415-760d-4173-86b5-a83a067b9434",
            "v1Settings": false,
            "value": "true",
          }
        }
        setToNoLabel="Set to 'No'"
        setToYesLabel="Set to 'Yes'"
        showInheritSettingsLabel={false}
        value={true}
      />,
    ],
    Array [
      "Undernourished prevalence 20% or higher",
      "The proportion of women in the adult population (18 years or older), with a BMI less than 18.5, is 20% or higher.",
      <p>
        Yes
      </p>,
      "3264c866-078e-4112-8894-052d53ab0a97",
      <EditSettingsButton
        changeSetting={[Function]}
        editLabel="Edit"
        inheritSettingsLabel="Inherit setting"
        openEditModal={[Function]}
        row={
          Object {
            "description": "The proportion of women in the adult population (18 years or older), with a BMI less than 18.5, is 20% or higher.",
            "documentId": "3264c866-078e-4112-8894-052d53ab0a97",
            "editing": false,
            "inheritedFrom": "3264c866-078e-4112-8894-052d53ab0a97",
            "key": "pop_undernourish",
            "label": "Undernourished prevalence 20% or higher",
            "locationId": "8340315f-48e4-4768-a1ce-414532b4c49b",
            "providerId": "demo",
            "resolveSettings": false,
            "serverVersion": 1596092266987,
            "settingIdentifier": "population_characteristics",
            "settingMetadataId": "1296",
            "settingsId": "21",
            "team": "Bukesa",
            "teamId": "6c8d2b9b-2246-47c2-949b-4fe29e888cc8",
            "type": "Setting",
            "uuid": "d16fc8f3-6115-4086-a71d-cf2c1fc85005",
            "v1Settings": false,
            "value": "true",
          }
        }
        setToNoLabel="Set to 'No'"
        setToYesLabel="Set to 'Yes'"
        showInheritSettingsLabel={true}
        value={true}
      />,
    ],
  ],
  "headerItems": Array [
    "Name",
    "Description",
    "Setting",
    <span>
      Inherited from
       
      <FontAwesomeIcon
        icon="question-circle"
      />
    </span>,
    "Actions",
  ],
  "renderHeaders": [Function],
  "renderRows": [Function],
  "tableClass": "table table-striped",
  "tbodyClass": "listview-tbody",
  "tdClass": "listview-td",
  "thClass": "listview-th",
  "theadClass": "listview-thead",
  "trClass": "listview-tr",
}
`;

exports[`components/Editsettings renders correctly when connected to store 1`] = `
Object {
  "data": Array [
    Array [
      "HIV incidence greater than 3 per 100 person-years in the absence of PrEP",
      "Women in the population have a substantial risk of HIV infection. Substantial risk of HIV infection is provisionally defined as HIV incidence greater than 3 per 100 person–years in the absence of pre-exposure prophylaxis (PrEP).",
      <p>
        No
      </p>,
      "_",
      <EditSettingsButton
        changeSetting={[Function]}
        editLabel="Edit"
        inheritSettingsLabel="Inherit setting"
        openEditModal={[Function]}
        row={
          Object {
            "description": "Women in the population have a substantial risk of HIV infection. Substantial risk of HIV infection is provisionally defined as HIV incidence greater than 3 per 100 person–years in the absence of pre-exposure prophylaxis (PrEP).",
            "documentId": "3264c866-078e-4112-8894-052d53ab0a97",
            "editing": false,
            "inheritedFrom": "",
            "key": "pop_hiv_incidence",
            "label": "HIV incidence greater than 3 per 100 person-years in the absence of PrEP",
            "locationId": "02ebbc84-5e29-4cd5-9b79-c594058923e9",
            "providerId": "demo",
            "resolveSettings": false,
            "serverVersion": 1595886234688,
            "settingIdentifier": "population_characteristics",
            "settingMetadataId": "1280",
            "settingsId": "21",
            "team": "Bukesa",
            "teamId": "6c8d2b9b-2246-47c2-949b-4fe29e888cc8",
            "type": "Setting",
            "uuid": "ceb5809f-896e-42bb-88a6-94353486d005",
            "v1Settings": false,
            "value": "false",
          }
        }
        setToNoLabel="Set to 'No'"
        setToYesLabel="Set to 'Yes'"
        showInheritSettingsLabel={false}
        value={false}
      />,
    ],
    Array [
      "Malaria-endemic setting",
      "This is a malaria-endemic setting.",
      <p>
        Yes
      </p>,
      "_",
      <EditSettingsButton
        changeSetting={[Function]}
        editLabel="Edit"
        inheritSettingsLabel="Inherit setting"
        openEditModal={[Function]}
        row={
          Object {
            "description": "This is a malaria-endemic setting.",
            "documentId": "3264c866-078e-4112-8894-052d53ab0a97",
            "editing": false,
            "inheritedFrom": "",
            "key": "pop_malaria",
            "label": "Malaria-endemic setting",
            "locationId": "02ebbc84-5e29-4cd5-9b79-c594058923e9",
            "providerId": "demo",
            "resolveSettings": false,
            "serverVersion": 1595886234688,
            "settingIdentifier": "population_characteristics",
            "settingMetadataId": "1282",
            "settingsId": "21",
            "team": "Bukesa",
            "teamId": "6c8d2b9b-2246-47c2-949b-4fe29e888cc8",
            "type": "Setting",
            "uuid": "2409a415-760d-4173-86b5-a83a067b9434",
            "v1Settings": false,
            "value": "true",
          }
        }
        setToNoLabel="Set to 'No'"
        setToYesLabel="Set to 'Yes'"
        showInheritSettingsLabel={false}
        value={true}
      />,
    ],
  ],
  "headerItems": Array [
    "Name",
    "Description",
    "Setting",
    <span>
      Inherited from
       
      <FontAwesomeIcon
        icon="question-circle"
      />
    </span>,
    "Actions",
  ],
  "renderHeaders": [Function],
  "renderRows": [Function],
  "tableClass": "table table-striped",
  "tbodyClass": "listview-tbody",
  "tdClass": "listview-td",
  "thClass": "listview-th",
  "theadClass": "listview-thead",
  "trClass": "listview-tr",
}
`;
